--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This is an example of using Composite Run Steps Actions
+## This is an example of using Composite Run Steps Actions
 
 name: CompositeExample
 
